--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,9 @@
 .player-bar {
   float:left;
 }
+.background {
+  height: 100%;
+  width:100%;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(90deg, red, yellow); /* Standard syntax (must be last) */
+}
